feat: agregar dbcontext y conexion a bd

--- a/rutinadeldiaservidor/rutinadeldiaservidor/rutinadeldiaservidor/appsettings.json
+++ b/rutinadeldiaservidor/rutinadeldiaservidor/rutinadeldiaservidor/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=db;Database=rutinadeldiadb;Username=postgres;Password=Lolita0408"
+  },
   "AllowedHosts": "*"
 }
