--- a/rutinadeldiacliente/package.json
+++ b/rutinadeldiacliente/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "concurrently": "^9.2.1",
     "react": "^19.1.1",
@@ -33,6 +34,8 @@
     "globals": "^16.3.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-node-polyfills": "^0.24.0"
   }
 }
