--- a/rutinadeldiaservidor/rutinadeldiaservidor/rutinadeldiaservidor/appsettings.json
+++ b/rutinadeldiaservidor/rutinadeldiaservidor/rutinadeldiaservidor/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=rutinadeldiadb;Username=postgres;Password=Lolita0408"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=prueba;Username=postgres;Password=SrPostgres"
   },
   "AllowedHosts": "*"
 }
