--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "vite": "^6.3.6"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.8"
   }
 }
