--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "vite": "^6.3.6"
   },
   "dependencies": {
-    "bootstrap": "^5.3.8"
+    "bootstrap": "^5.3.8",
+    "react-icons": "^5.5.0"
   }
 }
