--- a/rutinadeldiacliente/package.json
+++ b/rutinadeldiacliente/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
+    "recharts": "^3.3.0",
     "sass": "^1.93.1"
   },
   "devDependencies": {
