feat: Generar rutinas con IA

--- a/rutinadeldiaservidor/rutinadeldiaservidor/rutinadeldiaservidor/appsettings.json
+++ b/rutinadeldiaservidor/rutinadeldiaservidor/rutinadeldiaservidor/appsettings.json
@@ -6,7 +6,11 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=prueba;Username=postgres;Password=SrPostgres"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=prueba;Username=postgres;Password=Biopunta01."
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Google": {
+    "ApiKey": "AIzaSyC7bkxImIpbOFZTLEUB0BGYmBvLQHfTO1M"
+  }
 }
