--- a/rutinadeldiaservidor/rutinadeldiaservidor/rutinadeldiaservidor/rutinadeldiaservidor.csproj
+++ b/rutinadeldiaservidor/rutinadeldiaservidor/rutinadeldiaservidor/rutinadeldiaservidor.csproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.8.22" />
+    <PackageReference Include="Hangfire.PostgreSql" Version="1.20.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
     
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
